Output the router error

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "field_logger",
+  "homepage": "https://ve2zdx.com/field-logger",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base=/field-logger/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
